[package]
name = "regex-compiler"
version = "1.0.0"
license = "Apache-2.0"
edition = "2021"
workspace = ".."

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "linear_scaling_of_input"
path = "benches/linear.rs"
harness = false

[[bench]]
name = "binary_serialization"
path = "benches/serialization.rs"
harness = false

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v2.0.1" }
regex-runtime = { path = "../runtime/" }
unicode-categories = { git = "https://github.com/ncatelli/unicode-categories", tag = "v0.2.0" }
