[package]
name = "regex-optimizer"
version = "1.0.0"
license = "Apache-2.0"
edition = "2021"
workspace = ".."

[dev-dependencies]
criterion = "0.3"


[dependencies]
regex-runtime = { path = "../runtime/" }
unicode-categories = { git = "https://github.com/ncatelli/unicode-categories", tag = "v0.2.0" }
