[package]
name = "regex-runtime"
version = "1.0.0"
license = "Apache-2.0"
edition = "2021"
workspace = ".."

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "linear_scaling_of_input"
path = "benches/linear.rs"
harness = false

[[bench]]
name = "binary_deserialization"
path = "benches/deserialization.rs"
harness = false

[dependencies]
unicode-categories = { git = "https://github.com/ncatelli/unicode-categories", tag = "v0.2.0" }
