[package]
name = "tests"
version = "0.2.0"
license = "Apache-2.0"
edition = "2021"
workspace = ".."

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "linear_scaling_of_input"
path = "benches/linear.rs"
harness = false

[dependencies]
regex-runtime = { path = "../runtime/" }
regex-compiler = { path = "../compiler/" }
